--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ button {
   flex-wrap: wrap;
   margin: 0 auto;
   background-color: rgb(255, 255, 255);
+  width: 600px;
+  height: 600px;
+  border: 10px double black;
 }
 
-.input {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
+.box {
+  box-sizing: border-box;
+  border: 1px solid grey;
+  opacity: 0.1;
 }
 
 .wrapper {
